--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,25 @@
 {
   "name": "Günlük Takip Programı",
-  "short_name": "Takip",
-  "start_url": "index.html",
+  "short_name": "GünlükTakip",
+  "description": "Günlük iş ve görev takip uygulaması",
+  "start_url": "/gunluk-takip/",
+  "scope": "/gunluk-takip/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#4CAF50",
+  "theme_color": "#2c3e50",
+  "lang": "tr",
   "icons": [
     {
-  "src": "icon-192.png",
-  "sizes": "192x192",
-  "type": "image/png",
-  "purpose": "any maskable"
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "icon-512.png",
+      "src": "icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ]
 }
-
-
